infra/dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  selector:
    matchLabels:
      app: dashboard
  replicas: 2
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: nginx
        image: xxx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 0.25
            memory: 0.5Gi
          requests:
            cpu: 0.25
            memory: 0.5Gi

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-nodeport
spec:
  type: NodePort
  selector:
    app: dashboard
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
